--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "description": "Projeto Web de agendamento para corte de cabelo feito no curso Full Stack da RocketSeat",
   "author": "Luiz Garbini Neto",
   "scripts": {
-    "server": "json-server --watch server.json --port 3333F",
-    "build": "webpack"
+    "build": "webpack",
+    "dev": "webpack server",
+    "server": "json-server --watch server.json --port 3333F"
   },
   "dependencies": {
     "json-server": "^1.0.0-alpha.21"
   },
   "devDependencies": {
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
